# subsetter

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  planner_config.example.yaml  planner_config.sample.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  sampler_config.example.yaml  setup.cfg  subsetter.example.yaml  tplbuild.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  test.yml
subsetter/: .planner.py.swp  __main__.py  _version.py  common.py  config.py  config_model.py  filters.py  metadata.py  plan_model.py  planner.py  replay.py  sample_data.py  sampler.py  solver.py  sql_dialects.py
tests/: basic_plan_expected.yml  basic_sample_expected.yml  dataset_manager.py  test_filters.py  test_live.py  test_planner_live.py  test_solver.py
tests/data/: big_join.yaml  data_types.yaml  fk_chain.yaml  fk_chain_compact.yaml  instruments.yaml  user_orders.yaml  user_orders_compact.yaml
tests/data/datasets/: big_join.yaml  data_types.yaml  fk_chain.yaml  instruments.yaml  user_orders.yaml
tests/datasets/: data_types.yaml  user_orders.yaml
