[metadata]
name = subsetter
version = attr: subsetter._version.__version__
author = Mark Gordon
author_email = msg555@gmail.com
description = MySQL database subsetting CLI tool
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/msg555/subsetter/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages =
    subsetter
python_requires = >=3.8
include_package_data = True
install_requires =
		sqlalchemy[mypy] ~= 2.0
		pydantic ~= 2.6
		pyyaml ~= 6.0
    faker ~= 19.3
    typing-extensions

[options.extras_require]

all =
		sqlalchemy[pymysql,postgresql_psycopg2binary]

pymysql =
		sqlalchemy[pymysql]

postgresql =
		sqlalchemy[postgresql]

postgresql_psycopg2binary =
		sqlalchemy[postgresql_psycopg2binary]

[options.package_data]
subsetter =
  py.typed

[options.entry_points]
console_scripts =
  subsetter = subsetter.__main__:main
